index.html updated

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Zachary Draper</title>
 </head>
 <body>
-    <header class="hBar"> 
-
+    <header> 
+        <h1>Zachary Draper</h1>
+        <a href="index.html">About Me</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </header>
+
 </body>
 </html>
