updated index.html, and working on contact.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,29 @@
         <a href="contact.html">Contact</a>
     </header>
 
+    <h2>About Me</h2>
+    <div class="container">
+        
+        <img src="https://via.placeholder.com/150">
+
+        <p>
+            Hello! My name is Zach Draper, I am 33 years old. I have 2 kid, an 11 year old daughter and a 4 year old son.
+            They are my life, everything that i do in my life now is for them, including finding a better way to make money
+            to support them. I am currently in the University of Utah Coding bootcamp, and am extremely excited to go on this 
+            journey. I already have a little background in the industry, but never did anything with it. 
+
+            A few things that i enjoy doing for fun spending time with my kids is the most imoportant thing to me. I also enjoy
+            spending time with my friends. I enjoy anything to do with being outside, wether it is fishing, hiking, camping, or 
+            writing code. I really enjoy the challenges to building websites, and see a bright future in the industry.
+
+        </p>
+
+        <footer>
+            <h4>Copyright</h4>
+        </footer>
+
+    </div>
+
+
 </body>
 </html>
