contact.html updated, and portfolio.html

--- a/contact.html
+++ b/contact.html
@@ -16,21 +16,25 @@
     </header>
         
     <h2>Contact</h2>
+    <div>
+        <form>
 
-    <form>
+            Name:<br>
+            <input type="text" name="Name"><br>
+            Email:<br>
+            <input type="text" name="Email"><br>
+            Message:<br>
+            <input type="text" name="Message"><br>
+            <input type="submit" name="submit">
 
-        Name:<br>
-        <input type="text" name="Name"><br>
-        Email:<br>
-        <input type="text" name="Email"><br>
-        Message:<br>
-        <input type="text" name="Message"><br>
-        <input type="submit" name="submit">
+        </form>
+    </div>
+
+    <footer>
+            <h4>Copyright</h4>
+     </footer>
 
 
-    </form>
 
-
-    
 </body>
 </html>
