--- a/index.html
+++ b/index.html
@@ -42,13 +42,21 @@
             
             <h2>About Me</h2>
 
-            <img src="assets/images/Me.jpg" alt="Zachary Draper">
+            <img id="image" src="assets/images/Me.jpg" alt="Zachary Draper">
 
             <p>
             Hello! My name is Zach Draper, I am 33 years old. I have 2 kid, an 11 year old daughter and a 4 year old son.
             They are my life, everything that i do in my life now is for them, including finding a better way to make money
-            to support them. I am currently in the University of Utah Coding bootcamp, and am extremely excited to go on this 
-            journey. I already have a little background in the industry, but never did anything with it. 
+            to support them.
+            </p>
+
+            <p>I am currently in the University of Utah Coding bootcamp, and am extremely excited to go on this 
+            journey. I already have a little background in the industry, I recieved an assosiates degree in computer programming from
+            Eagle Gate College. Although that was 10 years ago, and i never kept coding or looking for a job. I regret it now, and am 
+            ready to get back into, and stick with it this time.
+            </p>
+            
+            <p>
 
             A few things that i enjoy doing for fun spending time with my kids is the most imoportant thing to me. I also enjoy
             spending time with my friends. I enjoy anything to do with being outside, wether it is fishing, hiking, camping, or 
