--- a/portfolio.html
+++ b/portfolio.html
@@ -4,33 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-    <header> 
-        <h1>Zachary Draper</h1>
-        <a href="index.html">About Me</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+    <header>
+        <div class="container">
+
+            <h1>Zachary Draper</h1>
+
+            <nav>
+
+                <ul>
+
+                        <li><a href="index.html">About Me</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+
+                </ul>
+
+            </nav>
+        </div>
+
     </header>
 
     
-    <section class="main">
+    <div class="main">
 
         <h2>Portfolio</h2>
 
-        <div class="content">
+        <div class="port-content">
 
-            <img src="assets/images/business-q-c-200-200-10.jpg">
-            <img src="assets/images/business-q-c-200-200-4.jpg">
-            <img src="assets/images/business-q-c-200-200-9.jpg">
-            <img src="assets/images/technics-q-c-200-200-2.jpg">
-            <img src="assets/images/technics-q-c-200-200-4.jpg">  
+            <img src="assets/images/business-q-c-200-200-10.jpg" alt="">
+            <img src="assets/images/business-q-c-200-200-4.jpg" alt="">
+            <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
+            <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
+            <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">  
 
         </div>
 
-    </section>
+    </div>
 
     <footer>
                 
