working on the final pieces

--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,11 @@
             Email:<br>
             <input type="text" name="Email"><br>
             Message:<br>
-            <input type="text" name="Message"><br>
-            <input type="submit" name="submit">
+            <input type="text-area" name="Message"><br>
+           
+         </form>
 
-        </form>
+         <input type="submit" name="submit">
     </div>
 
     <footer>
