--- a/portfolio.html
+++ b/portfolio.html
@@ -35,20 +35,20 @@
         <h2>Portfolio</h2>
 
         <div class="port-content">
-
-            <img src="assets/images/business-q-c-200-200-10.jpg" alt="">
-            <img src="assets/images/business-q-c-200-200-4.jpg" alt="">
-            <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
-            <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
-            <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">  
-
+            <img src="assets/images/business-q-c-200-200-10.jpg" alt=""><br>
+            <img src="assets/images/business-q-c-200-200-4.jpg" alt=""><br>
+            <img src="assets/images/business-q-c-200-200-9.jpg" alt=""><br>
+        </div>
+        <div class="port-content2">
+            <img src="assets/images/technics-q-c-200-200-2.jpg" alt=""><br>
+            <img src="assets/images/technics-q-c-200-200-4.jpg" alt=""> <br>
         </div>
 
     </div>
 
     <footer>
                 
-            <h4>Copyright</h4>
+            <h4>Copyright </h4>
 
     </footer>
     
