--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <nav>
 
-                    <ul>
+                    <ul class="list">
 
                         <li><a href="index.html">About Me</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
