--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
             Email:<br>
             <input type="text" name="Email"><br>
             Message:<br>
-            <input type="text-area" name="Message"><br>
+            
            
          </form>
 
-         <input type="submit" name="submit">
+         <button></button>
     </div>
 
     <footer>
