--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
 
             <nav>
 
-                <ul>
+                <ul class="list">
 
-                    <li><a href="index.html">About Me</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="index.html">About Me</a></li><span class="span"></span>
+                    <li><a href="portfolio.html">Portfolio</a></li><span class="span"></span>
                     <li><a href="contact.html">Contact</a></li>
 
                 </ul>
@@ -43,9 +43,9 @@
             Email:<br>
             <input type="text" name="Email"><br>
             Message:<br>
+            <textarea class="text-area" type="text" name="Message"></textarea>
             
-           
-         </form>
+           </form>
 
          <button></button>
     </div>
