still working on portfolio

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
             Message:<br>
             <textarea class="text-area" type="text" name="Message"></textarea>
             
-           </form>
+            <button>Submit</button>
+        </form>
 
-         <button></button>
     </div>
 
     <footer>
