--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
 
             <nav>
 
-                <ul>
+                <ul class="list">
 
-                        <li><a href="index.html">About Me</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="index.html">About Me</a></li><span class="span"></span>
+                        <li><a href="portfolio.html">Portfolio</a></li><span class="span"></span>
                         <li><a href="contact.html">Contact</a></li>
 
                 </ul>
@@ -35,14 +35,30 @@
         <h2>Portfolio</h2>
 
         <div class="port-content">
-            <img src="assets/images/business-q-c-200-200-10.jpg" alt=""><br>
-            <img src="assets/images/business-q-c-200-200-4.jpg" alt=""><br>
-            <img src="assets/images/business-q-c-200-200-9.jpg" alt=""><br>
+            <div>
+             <img class="image1" src="assets/images/business-q-c-200-200-10.jpg" alt="">
+             <h3>Hangman</h3>
+            </div>
+            <div>
+                <img class="image2" src="assets/images/business-q-c-200-200-4.jpg" alt="">
+                <h3>Hangman</h3>
+            </div>
+            <div>
+                <img class="image3" src="assets/images/technics-q-c-200-200-2.jpg" alt="">
+            <div>
+                <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">
+            </div>
+            <div>
+                <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
+            </div>
         </div>
-        <div class="port-content2">
-            <img src="assets/images/technics-q-c-200-200-2.jpg" alt=""><br>
-            <img src="assets/images/technics-q-c-200-200-4.jpg" alt=""> <br>
+        <!-- <div class="port-content-2">
+            <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
         </div>
+        <div class="port-content-3">
+            <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
+            <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">
+        </div> -->
 
     </div>
 
