--- a/portfolio.html
+++ b/portfolio.html
@@ -36,36 +36,37 @@
         <div class="main">
 
             <h2>Portfolio</h2>
-
             <div class="content">
-                <div class="port-content1">
+                <div>
                     <img src="assets/images/business-q-c-200-200-10.jpg" alt="">
-                    <h3>Hangman</h3>
+                    <h3 class="h3">Hangman</h3>
+                </div>
+                <div>
                     <img src="assets/images/business-q-c-200-200-4.jpg" alt="">
                     <h3>Hangman</h3>
+                </div>
+                <div>
                     <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
                     <h3>Hangman</h3>
                 </div>
-
-
-                <div class="port-content2">
+                <div>
                     <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">
                     <h3>Hangman</h3>
+                </div>
+                <div>
                     <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
                     <h3>Hangman</h3>
-                    <div>
                 </div>
-
-
             </div>
+
         </div>
     </div>
 
-            <footer>
+    <footer>
 
-                <h4>Copyright &copy;</h4>
+        <h4>Copyright &copy;</h4>
 
-            </footer>
+    </footer>
 
 </body>
 
