--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,30 @@
             <h2>Portfolio</h2>
             <div class="content">
                 <div class="img-1">
-                    <img src="assets/images/business-q-c-200-200-10.jpg" alt="">
-                    <h3 class="header-text">Hangman</h3>
-                    <img src="assets/images/business-q-c-200-200-4.jpg" alt="">
-                    <h3 class="header-text">RPG Game</h3>
-                    <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
-                    <h3 class="header-text">Trivia Game</h3>
+                    <div>
+                        <img src="assets/images/business-q-c-200-200-10.jpg" alt="">
+                        <h3 class="header-text">Hangman</h3>
+                    </div>
+                    <div>
+                        <img src="assets/images/business-q-c-200-200-4.jpg" alt="">
+                        <h3 class="header-text">RPG Game</h3>
+                    </div>
                 </div>
                 <div class="img-2">
-                    <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">
-                    <h3 class="header-text">Rutgers Info Widget</h3>
-                    <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
-                    <h3 class="header-text">Rock Paper Scissors</h3>
+                    <div>
+                        <img src="assets/images/technics-q-c-200-200-2.jpg" alt="">
+                        <h3 class="header-text">Trivia Game</h3>
+                    </div>
+                    <div>
+                        <img src="assets/images/technics-q-c-200-200-4.jpg" alt="">
+                        <h3 class="header-text">Rutgers Info Widget</h3>
+                    </div>
+                </div>
+                <div class="img-3">
+                    <div>
+                        <img src="assets/images/business-q-c-200-200-9.jpg" alt="">
+                        <h3 class="header-text">Rock Paper Scissors</h3>
+                    </div>
                 </div>
             </div>
         </div>
